# fractal-database

./: .coverage  .gitignore  Dockerfile.test  Makefile  conftest.py  coverage.lcov  fractal_database.dev.env  pyproject.toml  tmp-fixture.json
.github/workflows/: ci.yaml
fractal_database/: apps.py  fields.py  models.py  representations.py  signals.py  utils.py
fractal_database/cli/: __init__.py  __main__.py  conf.py  fmt.py  utils.py
fractal_database/controllers/: fractal_database_controller.py  fractal_database_controller2.py
fractal_database/management/commands/: replicate.py
fractal_database/migrations/: 0001_initial.py
fractal_database/replication/: tasks.py
fractal_database/templates/project_template/project_name/: settings.py-tpl
test-config/: entrypoint.sh  prepare-test.py
tests/: test.py  test_post_migrate.py  test_replicate.py  test_representations.py  test_signals.py  test_tasks.py  test_utils.py
tests/fractal_database_controller/: test_build.py  test_build_base.py  test_clone.py  test_create.py  test_device_add.py  test_device_create.py  test_download.py  test_download_file.py  test_fetch.py  test_get_fractal_app.py  test_init.py  test_invite.py  test_join.py  test_list_invite.py  test_migrate.py  test_print_progress_bar.py  test_publish.py  test_sync_data.py  test_sync_database_metadata.py  test_upload.py  test_verify_repos_cloned.py
tests/models/: test_database.py  test_replication_target.py
tests/old_tests/models/: test_database.py  test_post_migrate.py  test_replication_target.py
tests/signals/: test_signals.py
tests/utils/: test_utils_get_project_name.py  test_utils_init_poetry_project.py  test_utils_use_django.py
