[tool.poetry]
name = "fractal-database"
version = "0.1.0"
description = ""
authors = ["Mo Balaa <balaa@fractalnetworks.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
taskiq-matrix = {git = "https://github.com/fractalnetworksco/taskiq-matrix.git"}
fractal-cli = {git = "https://github.com/fractalnetworksco/fractal-cli.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
fractal = "fractal_database.cli.__main__:main"

[tool.poetry.plugins."fractal_database.entrypoint"]
"fractal_database" = "fractal_database.cli"

[tool.poetry.plugins."fractal_database.plugins"]
"db" = "fractal_database.controllers.fractal_database_controller"
"test" = "fractal_database.controllers.fractal_database_controller2"
"login" = "fractal.controllers.login"

