[tool.poetry]
name = "fractal-database"
version = "0.0.6"
description = ""
authors = ["Mo Balaa <balaa@fractalnetworks.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
# depending on the git version for now since the package is not published yet
fractal-cli = { git = "https://github.com/fractalnetworksco/fractal-cli.git", branch = "main" }
# depending on the git version for now since the package is not published yet
fractal-database-matrix = { git = "https://github.com/fractalnetworksco/fractal-database-matrix.git", branch = "use-autofield" }
django = ">=5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.plugins."fractal.plugins"]
"db" = "fractal_database.controllers.fractal_database_controller"
